[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gladoss"
version = "0.0.1"
authors = [
  { name="Xander Wilcke", email="w.x.wilcke@vu.nl" },
]
description = "Online Anomaly Detection on Distributed RDF Streams"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "pyRDF >= 2.3.0",
  "requests"
  ]
keywords = ["rdf", "knowledge graphs", "anomaly detection", "rdf streams"]

[project.optional-dependencies]
demo = ["fastapi[standard]"]

[project.urls]
"Homepage" = "https://gitlab.com/wxwilcke/gladoss"
"Repository" = "https://gitlab.com/wxwilcke/gladoss"
"Documentation" = "https://wxwilcke.gitlab.io/gladoss"
