[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gladoss"
version = "0.0.1"
authors = [
  { name="Xander Wilcke", email="w.x.wilcke@vu.nl" },
]
description = "Online Anomaly Detection on Distributed RDF Streams"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "pyRDF",
  "requests",
  "numpy"
  ]
keywords = ["rdf", "knowledge graphs", "anomaly detection", "rdf streams"]

[project.optional-dependencies]
demo = ["fastapi[standard]"]

[project.urls]
"Homepage" = "https://gitlab.com/wxwilcke/gladoss"
"Repository" = "https://gitlab.com/wxwilcke/gladoss"
"Documentation" = "https://wxwilcke.gitlab.io/gladoss"
